<?xml version="1.0"?>
<package format="2">
  <name>robot_cam_uestc</name>
  <version>0.2.0</version>
  <description>The robot camera package for usetc</description>
  <author>RoboMaster</author>
  <maintainer email="1350824033@qq.com">gezp</maintainer>
  <maintainer email="1418555417@qq.com">wyx</maintainer>
  <license>GPL 3.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_transport</build_depend>
  <build_depend>robot_cam</build_depend>
  <build_depend>robot_tool</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>robot_cam</exec_depend>
  <exec_depend>robot_tool</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
