<package>
    <name>robot_msgs</name>
    <version>0.0.1</version>
    <description>
        Robot OS
    </description>
    <author>FWC</author>
    <maintainer email="2383226319@qq.com">FWC</maintainer>
    <license>GPL 3.0 </license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>


    <run_depend>actionlib</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

    <export>
    </export>

</package>
