<?xml version="1.0"?>
<package format="2">
  <name>task_image_related</name>
  <version>0.1.0</version>
  <description>Robot OS,task_auto_aim package</description>
  <author>fwc</author>
  <maintainer email="2383226319@qq.com">fwc</maintainer>
  <license>GPL 3.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_transport</build_depend> 
  <build_depend>robot_msgs</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>robot_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
