<?xml version="1.0"?>
<package format="2">
  <name>robot_core</name>
  <version>0.1.0</version>
  <description>The sentry robot package for uestc</description>
  <author>RM1.5</author>
  <maintainer email="1418555417@qq.com">wyx</maintainer>
  <license>GPL 3.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>robot_base_pr</build_depend>
  <build_depend>robot_tool_pr</build_depend>
  <build_depend>robot_tool</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_base_pr</exec_depend>
  <exec_depend>robot_tool_pr</exec_depend>
  <exec_depend>robot_tool</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
